# sber

./: .gitignore  README.md  app.py  evaluate.py  knowledge_bench_private_scores.csv  pyproject.toml  requirements.txt  run_project.bat  run_project.py  train.py
.github/workflows/: ci.yml
configs/: api.yaml  features.yaml  model.yaml
data/raw/: external_seed_qa.jsonl  external_synthetic_factual_data.jsonl  seed_qa.jsonl  synthetic_factual_data.jsonl
notebooks/: 01_error_analysis.ipynb
scripts/: estimate_pipeline.sh  generate_dataset.sh  ingest_external.sh  install.sh  run_ui.ps1  run_ui.sh  score_public.sh  smoke.sh  train.sh
src/guardian_of_truth/: __init__.py  api_client.py  cache.py  classifier.py  estimate.py  evaluate.py  external_data.py  feature_extractor.py  generation.py  gradio_app.py  guardian.py  preprocess.py  training.py  utils.py
tests/: test_api_client.py  test_evaluate.py  test_external_data.py  test_feature_extractor.py  test_generation.py  test_gradio_app.py  test_guardian.py  test_import.py  test_integration_live.py  test_preprocess.py  test_training.py  test_utils.py
