[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardian-of-truth"
version = "0.1.0"
description = "API-only factual hallucination detector backed by Groq."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "ArtemChik103" }]
dependencies = [
    "groq>=0.25.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "tenacity>=8.4.0,<9.0.0",
    "numpy>=1.26.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "joblib>=1.4.0,<2.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "tqdm>=4.66.0,<5.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0,<9.0.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
